--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,12 @@
 * {
     font-family: "Outfit", sans-serif;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
